<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".ui.admin.AdminFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_admin_toolBar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:background="@color/secondary_color"
        app:title="@string/title_admin"
        app:titleTextColor="@color/main_color" />

    <ImageView
        android:id="@+id/fragment_admin_iv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:gravity="center"
        android:minWidth="64dp"
        android:minHeight="64dp"
        android:src="@drawable/icon_coin"

        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_admin_toolBar" />

    <TextView
        android:id="@+id/fragment_admin_tv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"

        android:gravity="start"
        android:minWidth="128dp"
        android:minHeight="48dp"
        android:text="0"
        android:textSize="36sp"

        app:layout_constraintBottom_toBottomOf="@+id/fragment_admin_iv_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fragment_admin_iv_currency"
        app:layout_constraintTop_toTopOf="@+id/fragment_admin_iv_currency" />

    <EditText
        android:id="@+id/fragment_admin_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"

        android:hint="@string/admin_et_password_hint"
        android:inputType="textPassword"
        android:textSize="28sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_admin_tv_currency" />

    <Button
        android:id="@+id/fragment_admin_btn_set_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/admin_password_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_admin_et_password" />

    <Button
        android:id="@+id/fragment_admin_btn_toggle_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/admin_btn_toggle_turned_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_admin_btn_set_reset_password" />

    <EditText
        android:id="@+id/fragment_admin_et_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="16dp"
        android:hint="Enter currency amount"
        android:inputType="number"

        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_admin_btn_toggle_admin" />

    <Button
        android:id="@+id/admin_fragment_button_take_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="128dp"
        android:minHeight="48dp"

        android:text="Take"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_admin_et_currency" />

</androidx.constraintlayout.widget.ConstraintLayout>